Fixed header image not showing

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -96,3 +96,7 @@ img {
     margin: 30px;
     padding: 30px;
 }
+
+h2 {
+    font-size: 80px;
+}
